--- a/index.html
+++ b/index.html
@@ -42,8 +42,8 @@
         <img src="images/rocket.png" class="rocket">
     </div>
     <script>
-        var countDownDate = new Date(Jul 31, 2022 00:00:00").getTime();
-        var x = setInterval(function()
+        var countDownDate = new Date("Aug 01, 2022 00:00:00").getTime();
+        var x = setInterval(function(){
             var now = new Date().getTime();
             var distance = countDownDate - now;
 
